--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-   
+   <!-- preloader -->
+   <div class="preloader">
+      <img src="./img/preloader.gif" alt="" class="preloader-img">
+   </div>
+   <!-- end of preloader -->
 </body>
 <!-- font awesome -->
 <script src="./js/all.js"></script>
