--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
       <img src="./img/preloader.gif" alt="" class="preloader-img">
    </div>
    <!-- end of preloader -->
+   <!-- header -->
+   <header class="header" id="header">
+      <!-- title -->
+      <article class="banner">
+         <h1 class="banner-title">we are <strong class="banner-title-name">from business</strong></h1>
+      </article>
+      <!-- end of title -->
+   </header>
+   <!-- end of header -->
 </body>
 <!-- font awesome -->
 <script src="./js/all.js"></script>
