--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
          <h1 class="banner-title">we are <strong class="banner-title-name">from business</strong></h1>
       </article>
       <!-- end of title -->
+      <!-- video -->
+      <div class="video-container">
+         <video class="video-item" id="video" autoplay loop>
+            <source src="./video/Working-it/Mp4/Working-it.mp4" type="video/mp4">
+            <source src="./video/Working-it/Ogv/Working-it.ogv" type="video/ogv">
+            <source src="./video/Working-it/Webm/Working-it.webm" type="video/webm">
+               browser does not support the video tag
+         </video>
+      </div>
+      <!-- end of video -->
    </header>
    <!-- end of header -->
 </body>
