adding overlay into header

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
          </video>
       </div>
       <!-- end of video -->
+      <!-- video overlay -->
+      <div class="video-overlay"></div>
+      <!-- end of video overlay -->
    </header>
    <!-- end of header -->
 </body>
