--- a/index.html
+++ b/index.html
@@ -34,6 +34,22 @@
       <!-- video overlay -->
       <div class="video-overlay"></div>
       <!-- end of video overlay -->
+      <!-- nav btn -->
+      <div class="navBtn">
+         <i class="fas fa-bars"></i>
+      </div>
+      <!-- end of nav btn -->
+      <!-- navbar -->
+      <nav class="nav">
+         <ul class="nav-links">
+            <li><a href="#" id="home" class="nav-single-link"><img src="./img/logo.svg" alt="logo"></a></li>
+            <li><a href="#home">home</a></li>
+            <li><a href="#contact">contact</a></li>
+            <li><a href="#projects">projects</a></li>
+            <li><a href="#progress">progress</a></li>
+         </ul>
+      </nav>
+      <!-- end of navbar -->
    </header>
    <!-- end of header -->
 </body>
