styling nav button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <!-- navbar -->
       <nav class="nav">
          <ul class="nav-links">
-            <li><a href="#" id="home" class="nav-single-link"><img src="./img/logo.svg" alt="logo"></a></li>
+            <li><a href="#home" id="home" class="nav-single-link"><img src="./img/logo.svg" alt="logo"></a></li>
             <li><a href="#home">home</a></li>
             <li><a href="#contact">contact</a></li>
             <li><a href="#projects">projects</a></li>
