adding social icons - html

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
          </ul>
       </nav>
       <!-- end of navbar -->
+      <!-- social icons -->
+      <div class="social-icons">
+         <a href="#" class="social-icon social-icon-facebook"><i class="fab fa-facebook"></i></a>
+         <a href="#" class="social-icon social-icon-twitter"><i class="fab fa-twitter"></i></a>
+         <a href="#" class="social-icon social-icon-instagram"><i class="fab fa-instagram"></i></a>
+      </div>
+      <!-- end of social icons -->
    </header>
    <!-- end of header -->
 </body>
