video toggle button - html/css

--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
          <a href="#" class="social-icon social-icon-instagram"><i class="fab fa-instagram"></i></a>
       </div>
       <!-- end of social icons -->
+      <!-- video switch -->
+      <div class="video-switch-container">
+         <div class="video-switch">
+            <span>on</span>
+            <span>off</span>
+            <div class="video-switch-btn"></div>
+         </div>
+      </div>
+      <!-- end of video switch -->
    </header>
    <!-- end of header -->
 </body>
