services section - html

--- a/index.html
+++ b/index.html
@@ -68,6 +68,96 @@
       <!-- end of video switch -->
    </header>
    <!-- end of header -->
+   <!-- services -->
+   <section class="services section-padding" id="services">
+      <!-- section title -->
+      <div class="section-title-container">
+         <!-- icon -->
+         <div class="section-title-icon">
+            <i class="fas fa-cogs"></i>
+         </div>
+         <div class="section-title-text">
+            <h1 class="section-title-name">services</h1>
+            <h4 class="section-title-info">Lorem ipsum dolor sit amet.</h4>
+         </div>
+      </div>
+      <!-- end of section title -->
+      <div class="flexbox-parent flexbox-parent-medium">
+         <!-- single service -->
+         <article class="service">
+            <div class="service-icon">
+               <i class="fas fa-desktop fa-fw"></i>
+            </div>
+            <!-- text -->
+            <div class="service-text">
+               <h2 class="service-name">web</h2>
+               <h4 class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, aperiam?</h4>
+            </div>
+         </article>
+         <!-- end of single service -->
+         <!-- single service -->
+         <article class="service">
+            <div class="service-icon">
+               <i class="fas fa-pencil-alt fa-fw"></i>
+            </div>
+            <!-- text -->
+            <div class="service-text">
+               <h2 class="service-name">prototyping</h2>
+               <h4 class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, aperiam?</h4>
+            </div>
+         </article>
+         <!-- end of single service -->
+         <!-- single service -->
+         <article class="service">
+            <div class="service-icon">
+               <i class="fas fa-mobile fa-fw"></i>
+            </div>
+            <!-- text -->
+            <div class="service-text">
+               <h2 class="service-name">responsive</h2>
+               <h4 class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, aperiam?</h4>
+            </div>
+         </article>
+         <!-- end of single service -->
+         <!-- single service -->
+         <article class="service">
+            <div class="service-icon">
+               <i class="fas fa-paint-brush fa-fw"></i>
+            </div>
+            <!-- text -->
+            <div class="service-text">
+               <h2 class="service-name">design</h2>
+               <h4 class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, aperiam?</h4>
+            </div>
+         </article>
+         <!-- end of single service -->
+         <!-- single service -->
+         <article class="service">
+            <div class="service-icon">
+               <i class="fas fa-lightbulb fa-fw"></i>
+            </div>
+            <!-- text -->
+            <div class="service-text">
+               <h2 class="service-name">research</h2>
+               <h4 class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, aperiam?</h4>
+            </div>
+         </article>
+         <!-- end of single service -->
+         <!-- single service -->
+         <article class="service">
+            <div class="service-icon">
+               <i class="fas fa-chart-bar fa-fw"></i>
+            </div>
+            <!-- text -->
+            <div class="service-text">
+               <h2 class="service-name">marketing</h2>
+               <h4 class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, aperiam?</h4>
+            </div>
+         </article>
+         <!-- end of single service -->
+      </div>
+   </section>
+   <!-- end of services -->
 </body>
 <!-- font awesome -->
 <script src="./js/all.js"></script>
