--- a/index.html
+++ b/index.html
@@ -158,6 +158,17 @@
       </div>
    </section>
    <!-- end of services -->
+   <!-- contact -->
+   <section class="contact section-padding" id="contact">
+      <div class="contact-container">
+         <h2 class="contact-title">contact us</h2>
+         <form class="contact-form">
+            <input type="email" class="contact-input">
+            <button type="submit" class="contact-submit">submit</button>
+         </form>
+      </div>
+   </section>
+   <!-- end of contact -->
 </body>
 <!-- font awesome -->
 <script src="./js/all.js"></script>
