projects section - html

--- a/index.html
+++ b/index.html
@@ -169,6 +169,80 @@
       </div>
    </section>
    <!-- end of contact -->
+   <!-- projects -->
+   <section class="projects section-padding" id="projects">
+      <!-- section title -->
+      <div class="reverse-section-title-container">
+         <!-- icon -->
+         <div class="reverse-section-title-icon">
+            <i class="fas fa-project-diagram"></i>
+         </div>
+         <div class="reverse-section-title-text">
+            <h1 class="reverse-section-title-name">projects</h1>
+            <h4 class="reverse-section-title-info">Lorem ipsum dolor sit amet.</h4>
+         </div>
+      </div>
+      <!-- end of section title -->
+      <div class="flexbox-parent flexbox-parent-medium" id="projects-modal">
+         <!-- single project -->
+         <article class="project">
+            <img src="./img/current-projects-1.jpeg" alt="" class="project-img">
+            <a href="./img/current-projects-1.jpeg" class="project-icon"><i class="fas fa-search"></i></a>
+            <div class="project-outline"></div>
+         </article>
+         <!-- end of single project -->
+         <!-- single project -->
+         <article class="project">
+            <img src="./img/current-projects-2.jpeg" alt="" class="project-img">
+            <a href="./img/current-projects-2.jpeg" class="project-icon"><i class="fas fa-search"></i></a>
+            <div class="project-outline"></div>
+         </article>
+         <!-- end of single project -->
+         <!-- single project -->
+         <article class="project">
+            <img src="./img/current-projects-3.jpeg" alt="" class="project-img">
+            <a href="./img/current-projects-3.jpeg" class="project-icon"><i class="fas fa-search"></i></a>
+            <div class="project-outline"></div>
+         </article>
+         <!-- end of single project -->
+         <!-- single project -->
+         <article class="project">
+            <img src="./img/current-projects-4.jpeg" alt="" class="project-img">
+            <a href="./img/current-projects-4.jpeg" class="project-icon"><i class="fas fa-search"></i></a>
+            <div class="project-outline"></div>
+         </article>
+         <!-- end of single project -->
+         <!-- single project -->
+         <article class="project">
+            <img src="./img/current-projects-5.jpeg" alt="" class="project-img">
+            <a href="./img/current-projects-5.jpeg" class="project-icon"><i class="fas fa-search"></i></a>
+            <div class="project-outline"></div>
+         </article>
+         <!-- end of single project -->
+         <!-- single project -->
+         <article class="project">
+            <img src="./img/current-projects-6.jpeg" alt="" class="project-img">
+            <a href="./img/current-projects-6.jpeg" class="project-icon"><i class="fas fa-search"></i></a>
+            <div class="project-outline"></div>
+         </article>
+         <!-- end of single project -->
+         <!-- single project -->
+         <article class="project">
+            <img src="./img/current-projects-7.jpeg" alt="" class="project-img">
+            <a href="./img/current-projects-7.jpeg" class="project-icon"><i class="fas fa-search"></i></a>
+            <div class="project-outline"></div>
+         </article>
+         <!-- end of single project -->
+         <!-- single project -->
+         <article class="project">
+            <img src="./img/current-projects-8.jpeg" alt="" class="project-img">
+            <a href="./img/current-projects-8.jpeg" class="project-icon"><i class="fas fa-search"></i></a>
+            <div class="project-outline"></div>
+         </article>
+         <!-- end of single project -->
+      </div>
+   </section>
+   <!-- end of projects -->
 </body>
 <!-- font awesome -->
 <script src="./js/all.js"></script>
