--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
    <title>Business Website</title>
    <!-- main css -->
    <link rel="stylesheet" href="./css/main.css">
+   <!-- magnific -->
+   <link rel="stylesheet" href="./plugins/magnific/magnific-popup.css">
 </head>
 <body>
    <!-- preloader -->
@@ -248,6 +250,8 @@
 <script src="./js/all.js"></script>
 <!-- jquery -->
 <script src="./js/jquery-3.3.1.min.js"></script>
+<!-- magnific -->
+<script src="./plugins/magnific/jquery.magnific-popup.min.js"></script>
 <!-- app js -->
 <script src="./js/app.js"></script>
 </html>
