progress section - html

--- a/index.html
+++ b/index.html
@@ -245,6 +245,84 @@
       </div>
    </section>
    <!-- end of projects -->
+   <!-- progress section -->
+   <section class="progress section-padding" id="progress">
+       <!-- section title -->
+       <div class="section-title-container">
+         <!-- icon -->
+         <div class="section-title-icon">
+            <i class="fas fa-spinner"></i>
+         </div>
+         <div class="section-title-text">
+            <h1 class="section-title-name">our progress</h1>
+            <h4 class="section-title-info">Lorem ipsum dolor sit amet.</h4>
+         </div>
+      </div>
+      <!-- end of section title -->
+      <div class="flexbox-parent flexbox-parent-medium">
+         <!-- progress img -->
+         <article class="progress-img progress-item"></article>
+         <!-- progress info -->
+         <article class="progress-info progress-item">
+            <!-- single progress bar -->
+            <div class="progress-bar">
+               <div class="progress-bar-text">
+                  <h1>deliveries</h1>
+                  <h1>100%</h1>
+               </div>
+               <div class="progress-bcg">
+                  <div class="progress-value progress-value-one"></div>
+               </div>
+            </div>
+            <!-- end of single progress bar -->
+            <!-- single progress bar -->
+            <div class="progress-bar">
+               <div class="progress-bar-text">
+                  <h1>initial sale</h1>
+                  <h1>90%</h1>
+               </div>
+               <div class="progress-bcg">
+                  <div class="progress-value progress-value-two"></div>
+               </div>
+            </div>
+            <!-- end of single progress bar -->
+            <!-- single progress bar -->
+            <div class="progress-bar">
+               <div class="progress-bar-text">
+                  <h1>customer satisfaction</h1>
+                  <h1>80%</h1>
+               </div>
+               <div class="progress-bcg">
+                  <div class="progress-value progress-value-three"></div>
+               </div>
+            </div>
+            <!-- end of single progress bar -->
+            <!-- single progress bar -->
+            <div class="progress-bar">
+               <div class="progress-bar-text">
+                  <h1>follow up</h1>
+                  <h1>70%</h1>
+               </div>
+               <div class="progress-bcg">
+                  <div class="progress-value progress-value-four"></div>
+               </div>
+            </div>
+            <!-- end of single progress bar -->
+            <!-- single progress bar -->
+            <div class="progress-bar">
+               <div class="progress-bar-text">
+                  <h1>response times</h1>
+                  <h1>60%</h1>
+               </div>
+               <div class="progress-bcg">
+                  <div class="progress-value progress-value-five"></div>
+               </div>
+            </div>
+            <!-- end of single progress bar -->
+         </article>
+      </div>
+   </section>
+   <!-- end of progress section -->
 </body>
 <!-- font awesome -->
 <script src="./js/all.js"></script>
