about section - html

--- a/index.html
+++ b/index.html
@@ -323,6 +323,72 @@
       </div>
    </section>
    <!-- end of progress section -->
+   <!-- about section -->
+   <section class="about section-padding" id="about">
+      <!-- section title -->
+      <div class="reverse-section-title-container">
+         <!-- icon -->
+         <div class="reverse-section-title-icon">
+            <i class="fas fa-user"></i>
+         </div>
+         <div class="reverse-section-title-text section-title-text-border-blue">
+            <h1 class="reverse-section-title-name">about us</h1>
+            <h4 class="reverse-section-title-info section-title-info-blue">Lorem ipsum dolor sit amet.</h4>
+         </div>
+      </div>
+      <!-- end of section title -->
+      <div class="flexbox-parent flexbox-parent-medium">
+         <!-- about img -->
+         <article class="about-img item margin">
+            <div class="about-img-container">
+               <h1 class="about-img-name">john doe</h1>
+               <img src="./img/team-1.jpg" alt="team member" class="about-img-photo">
+               <div class="about-img-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis aliquam repellat omnis ut. Ipsa ad quibusdam, necessitatibus fugit recusandae deserunt?</div>
+            </div>
+         </article>
+         <!-- about info -->
+         <article class="about-info item-margin">
+            <h1 class="about-info-title">frequent questions</h1>
+            <!-- single accordion -->
+            <div class="accordion">
+               <!-- header -->
+               <div class="accordion-header">
+                  <div class="accordion-icon"><i class="fas fa-desktop"></i></div>
+               </div>
+               <h4 class="accordion-title">web design &amp; development</h4>
+               <div class="accordion-btn"><i class="fas fa-arrow-down"></i></div>
+               <!-- content -->
+               <div class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, modi quo saepe quas ipsum facere. Vitae maiores nulla earum officia!</div>
+            </div>
+            <!-- end of single accordion -->
+            <!-- single accordion -->
+            <div class="accordion">
+               <!-- header -->
+               <div class="accordion-header">
+                  <div class="accordion-icon"><i class="fas fa-desktop"></i></div>
+               </div>
+               <h4 class="accordion-title">article writer</h4>
+               <div class="accordion-btn"><i class="fas fa-arrow-down"></i></div>
+               <!-- content -->
+               <div class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, modi quo saepe quas ipsum facere. Vitae maiores nulla earum officia!</div>
+            </div>
+            <!-- end of single accordion -->
+            <!-- single accordion -->
+            <div class="accordion">
+               <!-- header -->
+               <div class="accordion-header">
+                  <div class="accordion-icon"><i class="fas fa-desktop"></i></div>
+               </div>
+               <h4 class="accordion-title">creative designer</h4>
+               <div class="accordion-btn"><i class="fas fa-arrow-down"></i></div>
+               <!-- content -->
+               <div class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, modi quo saepe quas ipsum facere. Vitae maiores nulla earum officia!</div>
+            </div>
+            <!-- end of single accordion -->
+         </article>
+      </div>
+   </section>
+   <!-- end of about section -->
 </body>
 <!-- font awesome -->
 <script src="./js/all.js"></script>
