number section - html/css

--- a/index.html
+++ b/index.html
@@ -389,6 +389,38 @@
       </div>
    </section>
    <!-- end of about section -->
+   <!-- numbers section -->
+   <section id="numbers" class="numbers">
+      <!-- single number -->
+      <article class="number section-padding">
+         <span class="number-icon"><i class="fas fa-user"></i></span>
+         <p class="numscroller number-data" data-min="1" data-max="1000" data-delay="1000" data-increment="1"></p>
+         <h3 class="number-name">users</h3>
+      </article>
+      <!-- end of single number -->
+      <!-- single number -->
+      <article class="number section-padding">
+         <span class="number-icon"><i class="fas fa-cart-plus"></i></span>
+         <p class="numscroller number-data" data-min="1" data-max="1000" data-delay="3000" data-increment="1"></p>
+         <h3 class="number-name">downloads</h3>
+      </article>
+      <!-- end of single number -->
+      <!-- single number -->
+      <article class="number section-padding">
+         <span class="number-icon"><i class="fas fa-fire-extinguisher"></i></span>
+         <p class="numscroller number-data" data-min="1" data-max="1000" data-delay="10000" data-increment="1"></p>
+         <h3 class="number-name">emergencies</h3>
+      </article>
+      <!-- end of single number -->
+      <!-- single number -->
+      <article class="number section-padding">
+         <span class="number-icon"><i class="fas fa-envelope"></i></span>
+         <p class="numscroller number-data" data-min="1" data-max="1000" data-delay="2000" data-increment="1"></p>
+         <h3 class="number-name">messages</h3>
+      </article>
+      <!-- end of single number -->
+   </section>
+   <!-- end of numbers section -->
 </body>
 <!-- font awesome -->
 <script src="./js/all.js"></script>
@@ -396,6 +428,8 @@
 <script src="./js/jquery-3.3.1.min.js"></script>
 <!-- magnific -->
 <script src="./plugins/magnific/jquery.magnific-popup.min.js"></script>
+<!-- numscroller -->
+<script src="./plugins/numscroller-1.0.js"></script>
 <!-- app js -->
 <script src="./js/app.js"></script>
 </html>
