team section - html

--- a/index.html
+++ b/index.html
@@ -421,6 +421,68 @@
       <!-- end of single number -->
    </section>
    <!-- end of numbers section -->
+   <!-- team section -->
+   <section class="team section-padding" id="team">
+      <!-- section title -->
+      <div class="section-title-container">
+         <!-- icon -->
+         <div class="section-title-icon">
+            <i class="fas fa-users"></i>
+         </div>
+         <div class="section-title-text">
+            <h1 class="section-title-name">team</h1>
+            <h4 class="section-title-info">Lorem ipsum dolor sit amet.</h4>
+         </div>
+      </div>
+      <!-- end of section title -->
+      <article class="team-img item-margin">
+         <img src="./img/team-1.jpg" alt="member" class="team-img-item active" data-id="0">
+         <img src="./img/team-2.jpg" alt="member" class="team-img-item" data-id="1">
+         <img src="./img/team-3.jpg" alt="member" class="team-img-item" data-id="2">
+         <img src="./img/team-4.jpg" alt="member" class="team-img-item" data-id="3">
+      </article>
+      <article class="team-info item-margin">
+         <img src="./img/team-1.jpg" alt="team member" class="team-info-img">
+         <div class="team-info-body">
+            <h1 class="team-info-member-name">john doe</h1>
+            <h4 class="team-info-member-job">developer</h4>
+            <p class="team-info-member-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum in dolore, ut delectus eius, quis sequi velit placeat fuga rem laborum perferendis alias aspernatur saepe, aliquam libero fugit itaque non reprehenderit praesentium maiores expedita unde? Animi explicabo exercitationem, enim cupiditate, repellendus, consectetur consequatur ab numquam nobis temporibus optio ex at?</p>
+            <article class="team-info-member-favorites">
+               <!-- single favourite -->
+               <div class="team-info-member-single-favorite">
+                  <!-- icon -->
+                  <div class="team-info-member-single-favorite-icon">
+                     <i class="fas fa-check"></i>
+                  </div>
+                  <!-- text -->
+                  <div class="team-info-member-single-favorite-text">eat</div>
+               </div>
+               <!-- end of single favourite -->
+               <!-- single favourite -->
+               <div class="team-info-member-single-favorite">
+                  <!-- icon -->
+                  <div class="team-info-member-single-favorite-icon">
+                     <i class="fas fa-check"></i>
+                  </div>
+                  <!-- text -->
+                  <div class="team-info-member-single-favorite-text">sleep</div>
+               </div>
+               <!-- end of single favourite -->
+               <!-- single favourite -->
+               <div class="team-info-member-single-favorite">
+                  <!-- icon -->
+                  <div class="team-info-member-single-favorite-icon">
+                     <i class="fas fa-check"></i>
+                  </div>
+                  <!-- text -->
+                  <div class="team-info-member-single-favorite-text">drink</div>
+               </div>
+               <!-- end of single favourite -->
+            </article>
+         </div>
+      </article>
+   </section>
+   <!-- end of team section -->
 </body>
 <!-- font awesome -->
 <script src="./js/all.js"></script>
