pricing section - html

--- a/index.html
+++ b/index.html
@@ -483,6 +483,147 @@
       </article>
    </section>
    <!-- end of team section -->
+   <!-- pricing section -->
+   <section class="prices section-padding" id="prices">
+       <!-- section title -->
+       <div class="reverse-section-title-container">
+            <!-- icon -->
+            <div class="reverse-section-title-icon">
+               <i class="fas fa-money-bill-alt"></i>
+            </div>
+            <div class="reverse-section-title-text">
+               <h1 class="reverse-section-title-name section-title-name-yellow">prices</h1>
+               <h4 class="reverse-section-title-info">Lorem ipsum dolor sit amet.</h4>
+            </div>
+         </div>
+         <!-- end of section title -->
+         <div class="flexbox-parent flexbox-parent-medium">
+            <!-- pricing card -->
+            <article class="pricing-card">
+               <h3 class="pricing-card-title">startup</h3>
+               <h1 class="pricing-card-value">$10</h1>
+               <ul class="pricing-card-list">
+                  <!-- list item -->
+                  <li class="pricing-card-item">
+                     <span class="pricing-card-icon">
+                        <i class="fa fa-check"></i>
+                     </span>
+                     <p class="pricing-card-test">sharing tools</p>
+                  </li>
+                  <!-- end of list item -->
+                  <!-- list item -->
+                  <li class="pricing-card-item">
+                     <span class="pricing-card-icon">
+                        <i class="fa fa-check"></i>
+                     </span>
+                     <p class="pricing-card-test">design tools</p>
+                  </li>
+                  <!-- end of list item -->
+                  <!-- list item -->
+                  <li class="pricing-card-item">
+                     <span class="pricing-card-icon">
+                        <i class="fa fa-times"></i>
+                     </span>
+                     <p class="pricing-card-test">private messages</p>
+                  </li>
+                  <!-- end of list item -->
+                  <!-- list item -->
+                  <li class="pricing-card-item">
+                     <span class="pricing-card-icon">
+                        <i class="fa fa-times"></i>
+                     </span>
+                     <p class="pricing-card-test">personal brand</p>
+                  </li>
+                  <!-- end of list item -->
+               </ul>
+               <a href="#" class="pricing-card-link">upgrade plan</a>
+            </article>
+            <!-- end of pricing card -->
+            <!-- pricing card -->
+            <article class="pricing-card pricing-card-custom">
+               <h3 class="pricing-card-title">pro</h3>
+               <h1 class="pricing-card-value">$50</h1>
+               <ul class="pricing-card-list">
+                  <!-- list item -->
+                  <li class="pricing-card-item">
+                     <span class="pricing-card-icon">
+                        <i class="fa fa-check"></i>
+                     </span>
+                     <p class="pricing-card-test">sharing tools</p>
+                  </li>
+                  <!-- end of list item -->
+                  <!-- list item -->
+                  <li class="pricing-card-item">
+                     <span class="pricing-card-icon">
+                        <i class="fa fa-check"></i>
+                     </span>
+                     <p class="pricing-card-test">design tools</p>
+                  </li>
+                  <!-- end of list item -->
+                  <!-- list item -->
+                  <li class="pricing-card-item">
+                     <span class="pricing-card-icon">
+                        <i class="fa fa-check"></i>
+                     </span>
+                     <p class="pricing-card-test">private messages</p>
+                  </li>
+                  <!-- end of list item -->
+                  <!-- list item -->
+                  <li class="pricing-card-item">
+                     <span class="pricing-card-icon">
+                        <i class="fa fa-check"></i>
+                     </span>
+                     <p class="pricing-card-test">personal brand</p>
+                  </li>
+                  <!-- end of list item -->
+               </ul>
+               <a href="#" class="pricing-card-link custom-pricing-card-link">upgrade plan</a>
+            </article>
+            <!-- end of pricing card -->
+            <!-- pricing card -->
+            <article class="pricing-card">
+               <h3 class="pricing-card-title">standard</h3>
+               <h1 class="pricing-card-value">$20</h1>
+               <ul class="pricing-card-list">
+                  <!-- list item -->
+                  <li class="pricing-card-item">
+                     <span class="pricing-card-icon">
+                        <i class="fa fa-check"></i>
+                     </span>
+                     <p class="pricing-card-test">sharing tools</p>
+                  </li>
+                  <!-- end of list item -->
+                  <!-- list item -->
+                  <li class="pricing-card-item">
+                     <span class="pricing-card-icon">
+                        <i class="fa fa-check"></i>
+                     </span>
+                     <p class="pricing-card-test">design tools</p>
+                  </li>
+                  <!-- end of list item -->
+                  <!-- list item -->
+                  <li class="pricing-card-item">
+                     <span class="pricing-card-icon">
+                        <i class="fa fa-check"></i>
+                     </span>
+                     <p class="pricing-card-test">private messages</p>
+                  </li>
+                  <!-- end of list item -->
+                  <!-- list item -->
+                  <li class="pricing-card-item">
+                     <span class="pricing-card-icon">
+                        <i class="fa fa-times"></i>
+                     </span>
+                     <p class="pricing-card-test">personal brand</p>
+                  </li>
+                  <!-- end of list item -->
+               </ul>
+               <a href="#" class="pricing-card-link">upgrade plan</a>
+            </article>
+            <!-- end of pricing card -->
+         </div>
+   </section>
+   <!-- end of pricing section -->
 </body>
 <!-- font awesome -->
 <script src="./js/all.js"></script>
