pricing section - css

--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
                      <span class="pricing-card-icon">
                         <i class="fa fa-check"></i>
                      </span>
-                     <p class="pricing-card-test">sharing tools</p>
+                     <p class="pricing-card-text">sharing tools</p>
                   </li>
                   <!-- end of list item -->
                   <!-- list item -->
@@ -516,7 +516,7 @@
                      <span class="pricing-card-icon">
                         <i class="fa fa-check"></i>
                      </span>
-                     <p class="pricing-card-test">design tools</p>
+                     <p class="pricing-card-text">design tools</p>
                   </li>
                   <!-- end of list item -->
                   <!-- list item -->
@@ -524,7 +524,7 @@
                      <span class="pricing-card-icon">
                         <i class="fa fa-times"></i>
                      </span>
-                     <p class="pricing-card-test">private messages</p>
+                     <p class="pricing-card-text">private messages</p>
                   </li>
                   <!-- end of list item -->
                   <!-- list item -->
@@ -532,7 +532,7 @@
                      <span class="pricing-card-icon">
                         <i class="fa fa-times"></i>
                      </span>
-                     <p class="pricing-card-test">personal brand</p>
+                     <p class="pricing-card-text">personal brand</p>
                   </li>
                   <!-- end of list item -->
                </ul>
@@ -549,7 +549,7 @@
                      <span class="pricing-card-icon">
                         <i class="fa fa-check"></i>
                      </span>
-                     <p class="pricing-card-test">sharing tools</p>
+                     <p class="pricing-card-text">sharing tools</p>
                   </li>
                   <!-- end of list item -->
                   <!-- list item -->
@@ -557,7 +557,7 @@
                      <span class="pricing-card-icon">
                         <i class="fa fa-check"></i>
                      </span>
-                     <p class="pricing-card-test">design tools</p>
+                     <p class="pricing-card-text">design tools</p>
                   </li>
                   <!-- end of list item -->
                   <!-- list item -->
@@ -565,7 +565,7 @@
                      <span class="pricing-card-icon">
                         <i class="fa fa-check"></i>
                      </span>
-                     <p class="pricing-card-test">private messages</p>
+                     <p class="pricing-card-text">private messages</p>
                   </li>
                   <!-- end of list item -->
                   <!-- list item -->
@@ -573,11 +573,11 @@
                      <span class="pricing-card-icon">
                         <i class="fa fa-check"></i>
                      </span>
-                     <p class="pricing-card-test">personal brand</p>
+                     <p class="pricing-card-text">personal brand</p>
                   </li>
                   <!-- end of list item -->
                </ul>
-               <a href="#" class="pricing-card-link custom-pricing-card-link">upgrade plan</a>
+               <a href="#" class="pricing-card-link pricing-card-custom-link">upgrade plan</a>
             </article>
             <!-- end of pricing card -->
             <!-- pricing card -->
@@ -590,7 +590,7 @@
                      <span class="pricing-card-icon">
                         <i class="fa fa-check"></i>
                      </span>
-                     <p class="pricing-card-test">sharing tools</p>
+                     <p class="pricing-card-text">sharing tools</p>
                   </li>
                   <!-- end of list item -->
                   <!-- list item -->
@@ -598,7 +598,7 @@
                      <span class="pricing-card-icon">
                         <i class="fa fa-check"></i>
                      </span>
-                     <p class="pricing-card-test">design tools</p>
+                     <p class="pricing-card-text">design tools</p>
                   </li>
                   <!-- end of list item -->
                   <!-- list item -->
@@ -606,7 +606,7 @@
                      <span class="pricing-card-icon">
                         <i class="fa fa-check"></i>
                      </span>
-                     <p class="pricing-card-test">private messages</p>
+                     <p class="pricing-card-text">private messages</p>
                   </li>
                   <!-- end of list item -->
                   <!-- list item -->
@@ -614,7 +614,7 @@
                      <span class="pricing-card-icon">
                         <i class="fa fa-times"></i>
                      </span>
-                     <p class="pricing-card-test">personal brand</p>
+                     <p class="pricing-card-text">personal brand</p>
                   </li>
                   <!-- end of list item -->
                </ul>
