--- a/index.html
+++ b/index.html
@@ -624,6 +624,60 @@
          </div>
    </section>
    <!-- end of pricing section -->
+   <!-- blog section -->
+   <section class="blogs section-padding" id="blogs">
+      <div class="flexbox-parent">
+         <!-- blog -->
+         <article class="blog item-margin flexbox-parent-medium">
+            <!-- blog photo -->
+            <div class="blog-photo">
+               <img src="./img/current-projects-1.jpeg" alt="" class="blog-photo-img">
+            </div>
+            <!-- blog info -->
+            <div class="blog-info">
+               <h1 class="blog-info-title">title</h1>
+               <div class="blog-info-underline">
+                  <p class="blog-info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, illum! Molestias quidem ut repellat dignissimos earum fuga quas tenetur recusandae, est quos, officia aperiam.</p>
+                  <a href="#" class="blog-info-link">read more</a>
+               </div>
+            </div>
+         </article>
+         <!-- end of blog -->
+         <!-- blog -->
+         <article class="blog blog-reverse item-margin flexbox-parent-medium">
+            <!-- blog photo -->
+            <div class="blog-photo">
+               <img src="./img/current-projects-2.jpeg" alt="" class="blog-photo-img">
+            </div>
+            <!-- blog info -->
+            <div class="blog-info">
+               <h1 class="blog-info-title">title</h1>
+               <div class="blog-info-underline">
+                  <p class="blog-info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, illum! Molestias quidem ut repellat dignissimos earum fuga quas tenetur recusandae, est quos, officia aperiam.</p>
+                  <a href="#" class="blog-info-link">read more</a>
+               </div>
+            </div>
+         </article>
+         <!-- end of blog -->
+         <!-- blog -->
+         <article class="blog item-margin flexbox-parent-medium">
+            <!-- blog photo -->
+            <div class="blog-photo">
+               <img src="./img/current-projects-3.jpeg" alt="" class="blog-photo-img">
+            </div>
+            <!-- blog info -->
+            <div class="blog-info">
+               <h1 class="blog-info-title">title</h1>
+               <div class="blog-info-underline">
+                  <p class="blog-info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, illum! Molestias quidem ut repellat dignissimos earum fuga quas tenetur recusandae, est quos, officia aperiam.</p>
+                  <a href="#" class="blog-info-link">read more</a>
+               </div>
+            </div>
+         </article>
+         <!-- end of blog -->
+      </div>
+   </section>
+   <!-- end of blog section -->
 </body>
 <!-- font awesome -->
 <script src="./js/all.js"></script>
