blog section - css

--- a/index.html
+++ b/index.html
@@ -636,10 +636,9 @@
             <!-- blog info -->
             <div class="blog-info">
                <h1 class="blog-info-title">title</h1>
-               <div class="blog-info-underline">
-                  <p class="blog-info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, illum! Molestias quidem ut repellat dignissimos earum fuga quas tenetur recusandae, est quos, officia aperiam.</p>
-                  <a href="#" class="blog-info-link">read more</a>
-               </div>
+               <div class="blog-info-underline"></div>
+               <p class="blog-info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, illum! Molestias quidem ut repellat dignissimos earum fuga quas tenetur recusandae, est quos, officia aperiam.</p>
+               <a href="#" class="blog-info-link">read more</a>
             </div>
          </article>
          <!-- end of blog -->
@@ -652,10 +651,9 @@
             <!-- blog info -->
             <div class="blog-info">
                <h1 class="blog-info-title">title</h1>
-               <div class="blog-info-underline">
-                  <p class="blog-info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, illum! Molestias quidem ut repellat dignissimos earum fuga quas tenetur recusandae, est quos, officia aperiam.</p>
-                  <a href="#" class="blog-info-link">read more</a>
-               </div>
+               <div class="blog-info-underline"></div>
+               <p class="blog-info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, illum! Molestias quidem ut repellat dignissimos earum fuga quas tenetur recusandae, est quos, officia aperiam.</p>
+               <a href="#" class="blog-info-link">read more</a>
             </div>
          </article>
          <!-- end of blog -->
@@ -668,10 +666,9 @@
             <!-- blog info -->
             <div class="blog-info">
                <h1 class="blog-info-title">title</h1>
-               <div class="blog-info-underline">
-                  <p class="blog-info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, illum! Molestias quidem ut repellat dignissimos earum fuga quas tenetur recusandae, est quos, officia aperiam.</p>
-                  <a href="#" class="blog-info-link">read more</a>
-               </div>
+               <div class="blog-info-underline"></div>
+               <p class="blog-info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, illum! Molestias quidem ut repellat dignissimos earum fuga quas tenetur recusandae, est quos, officia aperiam.</p>
+               <a href="#" class="blog-info-link">read more</a>
             </div>
          </article>
          <!-- end of blog -->
